--- a/css/main.css
+++ b/css/main.css
@@ -1388,6 +1388,8 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 200px;
   height: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 768px) {
