--- a/sass/layout/_futer-forn.scss
+++ b/sass/layout/_futer-forn.scss
@@ -4,7 +4,7 @@
   
   
   @media screen and (min-width: 768px) {
-     display:block;
+    display:block;
      //flex-wrap: wrap;
     justify-content: center;
     }
@@ -51,6 +51,8 @@
     
     width: 200px;
     height: 50px;
+    margin-left: auto;
+    margin-right: auto;
 
     @media screen and (min-width: 768px) {
      display: block;
@@ -78,8 +80,14 @@
   font-size: 16px;
   line-height: 1,25;
   letter-spacing: 0.03em;
-
   color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 20px;
+   @media screen and (min-width: 768px) {
+   
+
+    }
+    @media screen and (min-width: 1200px) {
+   
 
 }
 
@@ -91,12 +99,4 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 text-align: center;
 margin-bottom: 20px;
- @media screen and (min-width: 768px) {
-     
-
-    }
-    @media screen and (min-width: 1200px) {
-      text-align: start;
-    
-    }
 }
