--- a/sass/layout/_futer-forn.scss
+++ b/sass/layout/_futer-forn.scss
@@ -1,12 +1,13 @@
 
 .futer-forn{
   width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   
   
   @media screen and (min-width: 768px) {
-    display:block;
-     //flex-wrap: wrap;
-    justify-content: center;
+
     }
     @media screen and (min-width: 1200px) {
       margin-left: 93px;
@@ -89,6 +90,7 @@
     @media screen and (min-width: 1200px) {
    
 
+}
 }
 
 .futer-forn-title {
