--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,3 +1,9 @@
 .section {
   padding: 94px 0;
+     @media screen and (min-width: 768px) {
+    
+    }
+    @media screen and (min-width: 1200px) {
+     padding: 94px 0;
+    }
 }
