--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,13 +11,16 @@
 .footer-container{
   display: block;
   align-items: baseline;
+  text-align: center;
     @media screen and (min-width: 768px) {
      display:flex;
      flex-wrap: wrap;
      justify-content: center;
+     text-align:start;
     }
     @media screen and (min-width: 1200px) {
         display:flex;
+        text-align:start;
     }
 }
 
@@ -63,12 +66,30 @@
   margin-bottom: 9px;
 }
 
+.footer-address-item{
+  text-align: center;
+    @media screen and (min-width: 768px) {
+    text-align: start;
+    }
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+    }
+}
+
 .footer__contact {
   margin-top: 20px;
 }
 
 .futer-social {
-margin-left: 70px;
+
+   @media screen and (min-width: 768px) {
+   margin-left: 165px;
+
+    }
+    @media screen and (min-width: 1200px) {
+   margin-left: 70px;
+
+}
 }
 
 
@@ -102,3 +123,11 @@ margin-bottom: 20px;
 .furet-social-link:focus {
     background-color: var(--text-line);
 }
+
+
+//.footer-addrres-container{
+
+
+  //display: flex;
+  //flex-direction: column;
+ // align-items: center;}
