--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,16 @@
 }
 
 .header-container {
-  height: 80px;
+ 
   display: flex;
   align-items: center;
   justify-content: space-between;
+   @media screen and (min-width: 768px) {
+   height: 80px;
+  }
+  @media screen and (min-width: 1200px) {
+    
+    }
 }
 
 .main-nav {
@@ -15,7 +21,15 @@
 }
 
 .address-list {
-  display: flex;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 84px;
+  }
+  @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-left: auto;
+    }
 }
 
 .address-list-item {
@@ -25,6 +39,8 @@
 }
 
 .site-nav {
+  display: none;
+  @media screen and (min-width: 768px) {
   display: flex;
   font-weight: 500;
   .link {
@@ -40,6 +56,13 @@
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
+   
+     
+    }
+    @media screen and (min-width: 1200px) {
+      
+    }
+
 }
 
 .list {
@@ -90,6 +113,7 @@
 .mail {
   font-weight: 500;
   margin-right: 50px;
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
   color: var(--primary-text-color);
