--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -1,27 +1,4 @@
 
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-  }
-}
-
-.menu .link {
-  padding: 10px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
-}
 
 .menu-toggle {
   min-height: 40px;
@@ -37,17 +14,17 @@
   border: none;
   border-radius: 50%;
   outline: none;
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
+  @media (min-width: 768px) {
+  
     display: none;
   }
 }
 
-.menu-toggle:hover,
-.menu-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.1);
+
+
+.menu-toggle:hover .header-form-icon,
+.menu-toggle:focus .header-form-icon{
+  fill: #2196F3;
 }
 
 .menu-container {
@@ -56,12 +33,20 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
-  z-index: 999;
+  padding: 48px 40px 48px 40px;
+  background-color: #ffffff;
+  z-index: 5;
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  
+    position: absolute;
+
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 .menu-container.is-open {
@@ -87,3 +72,75 @@
   color: #fff;
   text-decoration: none;
 }
+
+
+
+.mobile-menu-list:not(:last-child){
+margin-bottom: 32px;
+}
+
+.mobile-menu-link{
+font-weight: 500;
+font-size: 40px;
+line-height: calc(47/40);
+text-align: center;
+letter-spacing: 0.02em;
+color: #212121;
+text-align: left;
+  &:focus{
+    color: #2196F3;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.mobile-menu-tel{
+  margin-bottom: 32px;
+
+}
+.mobile-menu-tel .telef{
+  font-weight: 500;
+  font-size: 34px;
+  line-height: calc(40/34);
+  letter-spacing: 0.02em;
+
+  color: #2196F3;
+}
+
+.mobile-menu-mail{
+  margin-bottom: 64px;
+
+}
+.mobile-menu-mail .mail{
+ font-weight: 500;
+font-size: 24px;
+line-height: calc(28/24);
+letter-spacing: 0.02em;
+color: #757575;
+}
+
+.mobile-menu-social{
+  display: flex;
+}
+
+.mobile-menu-social-list{
+font-weight: 500;
+font-size: 18px;
+line-height: 1,22;
+
+letter-spacing: 0.02em;
+
+
+  &:not(:last-child){
+  margin-right: 20px;
+  }
+}
+
+.mobile-menu-social-link{
+color: #2196F3;
+}
+
+.menu-toggle:hover .lose-icon-icon,
+.menu-toggle:focus .lose-icon-icon {
+  fill: #2196F3;
+}
+
