--- a/sass/layout/_project-button.scss
+++ b/sass/layout/_project-button.scss
@@ -1,14 +1,30 @@
 .project-button {
   display: flex;
-  justify-content: center;
+  
+  flex-wrap: wrap;
+  
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
   margin-bottom: 50px;
+  }
 }
 
 .project-button__list {
   margin-left: 8px;
+   width: calc((100% - 6 * 10px) / 3);
     &:first-child {
       margin-left: 0px;
     }
+    @media screen and (min-width: 768px) {
+      
+  }
+  @media screen and (min-width: 1200px) {
+  
+  }
+  
 }
 
 
@@ -26,10 +42,21 @@
   border-radius: 4px;
   font-family: inherit;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  white-space: nowrap;
+
+
+
+ 
     &:hover,
     &:focus {
     background: #2196F3;
     color: var(--white-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     }
+      @media screen and (min-width: 768px) {
+      }
+     
+  @media screen and (min-width: 1200px) {
+
+  }
 }
