--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -14,10 +14,16 @@
 }
 
 .project-list {
-  display: flex;
-  flex-wrap: wrap;
+  
   margin-left: calc(-1 * 30px);
   margin-top: calc(-1 * 30px);
+    @media screen and (min-width: 768px) {
+    display: flex;
+  flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+  
+  }
 }
 
 .item {
@@ -31,6 +37,12 @@
     &:hover .project-description {
     transform: translateY(0);
   }  
+     @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+  @media screen and (min-width: 1200px) {
+  flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 
