--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,8 +5,8 @@
 .team__list {
   display: block;
     @media screen and (min-width: 768px) {
-        display: flex;
-    flex-wrap: wrap;
+      display: flex;
+      flex-wrap: wrap;
     }
    @media screen and (min-width: 1200px) {
       display: flex;
@@ -25,6 +25,8 @@
     //}
      @media screen and (min-width: 768px) {
        margin-left: 30px;
+       width: calc((100% - 4 * 15px) / 2);
+       
     }
    @media screen and (min-width: 1200px) {
        margin-left: 30px;
