--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -5,6 +5,8 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
