--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,6 +4,8 @@
   justify-content: center;
    @media screen and (min-width: 768px) {
     flex-wrap: wrap;
+        margin: -15px;
+    
     }
    @media screen and (min-width: 1200px) {
       flex-wrap: nowrap;
