--- a/css/main.css
+++ b/css/main.css
@@ -1553,7 +1553,7 @@ body {
 }
 
 .futer-forn-input {
-  width: 358px;
+  width: 100%;
   height: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-sizing: border-box;
@@ -1570,6 +1570,12 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .futer-forn-input {
+    width: 358px;
+  }
 }
 
 .futer-forn-title {
