--- a/sass/layout/_futer-forn.scss
+++ b/sass/layout/_futer-forn.scss
@@ -68,7 +68,7 @@
 }
 
 .futer-forn-input{
-  width: 358px;
+  width: 100%;
   height: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -84,7 +84,7 @@
   color: rgba(255, 255, 255, 0.6);
   margin-bottom: 20px;
    @media screen and (min-width: 768px) {
-   
+   width: 358px;
 
     }
     @media screen and (min-width: 1200px) {
