--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -132,6 +132,9 @@
       fill: var(--text-line);
     }
   }
+  @media screen and (min-width: 1200px) {
+     margin-bottom: 0px;
+  }
 }
 
 .telef {
