--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer-address-list {
   display: block;
+  
 }
 
 
@@ -12,6 +13,7 @@
   display: block;
   align-items: baseline;
   text-align: center;
+  
     @media screen and (min-width: 768px) {
      display:flex;
      flex-wrap: wrap;
@@ -78,9 +80,11 @@
 
 .footer__contact {
   margin-top: 20px;
+  margin-bottom: 60px;
 }
 
 .futer-social {
+  margin-bottom: 60px;
 
    @media screen and (min-width: 768px) {
    margin-left: 165px;
