--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -148,9 +148,10 @@
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover .telef-icon,
-  &:focus .telef-icon {
-    fill: var(--text-line);
+  &:hover,
+  &:focus {
+    color: var(--text-line);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .telef-icon,
     .telef-icon {
       fill: var(--text-line);
