--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,7 +17,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url(../images/mob/hero_mob@2X.jpg);
+        url(../images/mob/hero_mob@2x.jpg);
     }
   background-repeat: no-repeat;
  padding: 118px 60px;
