--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -45,7 +45,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+      @media screen and (min-width: 768px) {
+    display: none;
+    }
 }
 
 .menu-container.is-open {
