--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -16,8 +16,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    min-width: 450px;
  
     padding: 40px;
+    @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    }
+
 }
 
 .close-icon{
@@ -98,12 +103,18 @@ outline: none;
 }
 
 .check-text {
-    font-size: 14px;
+        font-size: 12px;
+    line-height: calc(14/12);
+    
     color: var(--fifth-text-color);
     display: flex;
     align-items: center;
     position: relative;
     margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: calc(24/14);
+    }
 }
 
 .check-item {
