--- a/sass/layout/_project-button.scss
+++ b/sass/layout/_project-button.scss
@@ -2,6 +2,7 @@
   display: flex;
   
   flex-wrap: wrap;
+  margin-bottom: 40px;
   
   @media screen and (min-width: 768px) {
     flex-wrap: nowrap;
@@ -13,8 +14,10 @@
 }
 
 .project-button__list {
-  margin-left: 8px;
-   width: calc((100% - 6 * 10px) / 3);
+  margin-right: 8px;
+  margin-bottom: 15px;
+  //margin-left: 8px;
+   //width: calc((100% - 6 * 10px) / 3);
     &:first-child {
       margin-left: 0px;
     }
