--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@
   clip: rect(0 0 0 0);
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -1761,17 +1765,15 @@ body {
 }
 
 .modal {
+  width: 100%;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   min-width: 450px;
+  overflow-y: auto;
   padding: 40px;
+  max-height: 100vh;
 }
 
 @media screen and (min-width: 1200px) {
