--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -8,22 +8,21 @@
 }
 
 .modal {
-
-    background-color: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 450px;
- 
-    padding: 40px;
-    @media screen and (min-width: 1200px) {
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  min-width: 450px;
+  overflow-y: auto;
+  padding: 40px;
+  max-height: 100vh;
+  
+  @media screen and (min-width: 1200px) {
     max-width: 528px;
-    }
-
+  }
 }
+
 
 .close-icon{
   margin-left: 10px;
